# c2s-scale-lab

./: CODE_OF_CONDUCT.md  Dockerfile  README.md  RESEARCH.md  example.py  pyproject.toml  requirements.txt  run_experiment.py  run_smoke_test.py
.github/workflows/: ci.yml
c2s_scale/: cli.py
experiments/: collect_pubmed.py  collect_trials.py  diagnose_ctgov.py  eval_embeddings.py  example_prompt.txt  extract_evidence.py  generate_llm_summary.py  generate_report.py  ollama_import.md  report_template.md  run_and_save.sh
experiments/outputs/: ctgov_diagnostic.json  final_report.md  llm_research_summary.json  pubmed.json  structured_evidence.json  trials.json  trials_fallback.json
scripts/: setup.ps1  setup.sh
